2008-07-07  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c: Remove unused variable.

	* src/graph3d.c: Ignore 'set size ratio' in 3D plots unless the view
	mode is 'set view map'.  This brings the behavior in line with the docs.

2008-07-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/eval.h src/eval.c: New routines fill_gpval_integer,
	fill_gpval_float, fill_gpval_complex. To be used for more readable
	setting of GPVAL_ variables.

2008-06-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff docs/README.ja:
	Sync Japanese documentation to gnuplot.doc rev 1.517

2008-06-26  Philipp K Janert  <janert@ieee.org>

	* src/interpolc.c (eval_kdensity do_kdensity): Follow code conventions.
	
2008-06-26  Peter Rosin  <pekberg@users.sourceforge.net>

	* term/ggi.trm: uint32 -> unit32_t
	Allows to build with current libggi.

2008-06-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Check for term->filled_polygon() before trying to
	call it.  (fixes segfault triggered by ggi terminal driver).

2008-06-26  Philipp K Janert  <janert@ieee.org>
	
	* src/gp_types.h src/interpol.c src/plot2d.c src/tables.c 
	docs/gnuplot.doc: Changes for new smoothing algorithm for 
	smooth histograms using Gaussian kernel density estimates.
	
2008-06-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (term_start_plot): The term/README file clearly states that
	terminal coordinates run from 0 to xmax-1 and 0 to ymax-1.  Therefore
	[xmax,ymax] is out of range, and we should revise the clipping limits
	accordingly.  NB: This may change the behavior of existing scripts that
	draw to the extreme edge of the canvas (e.g. border=0).
	Bugfix:  Prevents tripping the assert() statements in emf.trm

2008-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Don't forget to draw a polyline even
	if it has only a single segment.
	Bugfix

2008-06-23  Petr Mikulik  <mikulik@physics.muni.cz>
